# Goodreads-Scraper

./: .gitignore  .pre-commit-config.yaml  README.md  logger.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
goodreads_scraper/: auth.py  read_books.js  scrape.py  utils.py
scraper/: scrape.py
src/scraper/: scrape.py
src/utils/: utils.py
tests/: test_integration.py  test_scraping.py  test_utils.py
tests/test_assets/: example_goodreads.html  test_page.html
