[tool.poetry]
name = "goodreads-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ "include" = "goodreads_scraper" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
ipykernel = "^6.27.1"
validators = "^0.22.0"
selenium = "^4.15.2"
chromedriver-autoinstaller = "^0.6.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pytest = "^7.4.3"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
