[project]
name = "goodreads-scraper"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.2,<5",
    "validators>=0.22.0,<0.23",
    "selenium>=4.15.2,<5",
    "chromedriver-autoinstaller>=0.6.4,<0.7",
]

[dependency-groups]
dev = [
    "mypy>=1.7.1,<2",
    "pytest>=7.4.3,<8",
    "pre-commit>=3.6.0,<4",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["goodreads_scraper"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
